# docunderstand

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/docunderstand/: __init__.py  main.py
