[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docunderstand"
version = "0.1.0"
description = "a python system for Visually Rich Document Understanding"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
docunderstand = "docunderstand.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/docunderstand"]
